--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -2338,8 +2338,7 @@ config NEON
 
 config KERNEL_MODE_NEON
 	bool "Support for NEON in kernel mode"
-	default n
-	depends on NEON
+	depends on NEON && AEABI
 	help
 	  Say Y to include support for NEON in kernel mode.
 
