drivers: gpu: update from ODROID XU kernel repo

--- a/drivers/gpu/pvr/Makefile
+++ b/drivers/gpu/pvr/Makefile
@@ -19,7 +19,6 @@ ccflags-y := \
 	-Wstrict-prototypes\
 	-Wno-unused-parameter\
 	-Wno-sign-compare\
-	-Werror\
 	-fno-strict-aliasing\
 	-Wno-pointer-arith\
 	-O3
@@ -81,7 +80,8 @@ DEFINES += \
 	-DSUPPORT_ACTIVE_POWER_MANAGEMENT \
 	-DUSING_532MHZ \
 	-DSUPPORT_SGX_HWPERF \
-	-DDUMP_UKERNEL_INFO_AT_TIMEOUT
+	-DDUMP_UKERNEL_INFO_AT_TIMEOUT \
+	-DPVR_DISABLE_LOGGING \
 
 ifeq ($(CONFIG_PVR_SGX_FENCE_SYNC),y)
 DEFINES += -DPVR_ANDROID_NATIVE_WINDOW_HAS_SYNC
