--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -1205,126 +1205,7 @@ config USB_CDFS_SUPPORT
 	bool "Auto install for cdfs"
 	default y
 
-comment "Debugging Feature"
-menuconfig SEC_DEBUG
-	bool "Samsung TN Ramdump Feature"
-	default y
-	help
-	  Samsung TN Ramdump Feature. Use INFORM3 and magic number at 0xc0000000.
-
-if SEC_DEBUG
-config SEC_DEBUG_SCHED_LOG
-	bool "Samsung Scheduler Logging Feature"
-	default n
-	help
-	  Samsung Scheduler Logging Feature for Debug use.
-
-config SEC_DEBUG_SOFTIRQ_LOG
-	bool "Samsung Softirq Logging Feature"
-	default n
-	depends on SEC_DEBUG_SCHED_LOG
-	help
-	  Samsung Softirq Logging Feature for Debug use.
-	  This option enables us to log softirq enter/exit.
-	  It is not only hard-irq which results in scheduler lockup,
-	  To be more clear we need to see also softirq logs.
-
-config SEC_DEBUG_SCHED_LOG_NONCACHED
-	bool "Samsung Scheduler Logging on noncached buf"
-	depends on SEC_DEBUG_SCHED_LOG
-	default n
-	help
-	  This option enables sec_debug_sched_log_noncached support.
-	  It can support non-cached sched log in RAM dump and We don't
-	  need to concern cache flush status for analyzing sudden
-	  lockup issue.
-
-config SEC_DEBUG_TIMER_LOG
-	bool "Samsung Timer Logging Feature"
-	default n
-	help
-	  Samsung Timer Logging Feature for Debug use.
-
-config SEC_DEBUG_SEMAPHORE_LOG
-	bool "Samsung Semaphore Logging Feature"
-	default n
-	help
-	  Samsung Semaphore Logging Feature for Debug use.
-
-config SEC_DEBUG_USER
-	bool "Panic on Userspace fault"
-	default y
-	help
-	  Panic on Userspace fault
-
-config SEC_DEBUG_PM_TEMP
-	bool "Temporary Logging for Sleep/Wakeup Issue"
-	default n
-	help
-	  Verbose Log on Sleep/Wakeup.
-
-config SEC_DEBUG_IRQ_EXIT_LOG
-	bool "Temporary Logging for IRQ delay"
-	default n
-	help
-	  Verbose Logging for IRQ delay.
-
-config SEC_DEBUG_AUXILIARY_LOG
-	bool "Samsung Auxiliary Logging on noncached buf"
-	default n
-	help
-	  This option enables sec_auxiliary_log support.
-	  we can log repeated information insuitable for kernel log like DVFS
-	  or power domain control information.
-	  It can support non-cached auxiliary log in RAM dump and We don't
-	  need to concern cache flush status for analyzing sudden
-	  system hang issue.
-
-config SEC_DEBUG_FUPLOAD_DUMP_MORE
-	bool "Dump more information at forced upload"
-	default n
-	help
-	  More information is printed out when a forced upload happens.
-	  It uses customized dump functions instead of panic call.
-
-
-config SEC_DEBUG_UMP_ALLOC_FAIL
-	bool "Show warning message when UMP allcation fails"
-	default n
-	help
-	  When UMP allocation fails there's no way to figure out the reason.
-	  For UMP and Mali is supposed to allocate per 1 page,
-	  we should take a good look at this failure.
-	  This only shows the alloc fail warning.
-
-config SEC_DEBUG_LIST_PANIC
-	bool "Panic when list corruption detected"
-	default n
-	help
-	  Panic when list structure corruption detected.
-	  Sometimes list corruptions are reported.
-	  But it reports only with WARN level.
-	  This will immediately stop the system.
-
-config SEC_DEBUG_IOVMM
-	bool "panic when iovmm alloc fails"
-	default n
-	help 
-	  panic when iovmm allocation fails
-	  this will immediately stop the system.
-
-config SEC_FILE_LEAK_DEBUG
-	bool "Panic when file leak detected"
-	default n
-	help
-	  Panic when file leak detected.
-
-config SEC_DEBUG_TIMERQUEUE_CORRUPTION
-	bool "Panic when timerqueue corruption detected"
-	default n
-	help
-	  Panic when timerqueue corruption detected.
-
+comment "Watchdog Feature"
 menuconfig SEC_WATCHDOG_RESET
 	bool "exynos5410 watchdog reset to exit from lockup"
 	depends on SOC_EXYNOS5410
@@ -1336,8 +1217,6 @@ if SEC_WATCHDOG_RESET
 config SEC_WATCHDOG_PET_TIME
 	int "sec watchdog kicking time interval value"
 	default 5
-endif
-
 endif
 
 config ANDROID_WIP
@@ -1361,52 +1240,6 @@ config INTERNAL_ISP_START_CAMERA
 	default n
 	help
 	  To help fast memory allocation for camera start-up case
-
-config SEC_LOG
-	default n
-	bool "Enable support for sec_log" if EMBEDDED
-	depends on PRINTK
-	help
-	  This option enables sec_log support. This provides combined
-	  log buffer for both bootloader and kernel. It also preserves
-	  previous content before reboot.
-
-config SEC_LOG_NONCACHED
-	default n
-	bool "Enable non cached kernel sec_log support" if EMBEDDED
-	depends on SEC_LOG
-	help
-	  This option enables sec_non_cached_klog support.  It can
-	  support non-cached kernel log in RAM dump and We don't need
-	  to concern cache flush status for analyzing sudden lockup
-	  issue.
-
-config SEC_LOG_LAST_KMSG
-	default n
-	bool "Enable /proc/last_kmsg support" if EMBEDDED
-	depends on SEC_LOG
-	help
-	  This option enables /proc/last_kmsg support.
-config SEC_AVC_LOG
-	default n
-	bool "Enable avc audit log support" if EMBEDDED
-	depends on SEC_DEBUG
-	help
-	  This option enables additional log buffer for audit log.
-config TIMA_DEBUG_LOG
-	default n
-	bool "Enable TIMA log support" if EMBEDDED
-	help
-	  This option enables TIMA_DEBUG log.
-
-config KOR_B10_DEBUG
-	bool "KOR ASTOOL debug feature"
-	default n
-	help
-	  This option enables debugging log for B10 project.
-	  This option provides reset history log in user version.
-	  This option enable proc/reset_reason support
-	  It's only support KOR Model
 
 comment "PowerManagement Feature"
 menuconfig SEC_PM
