--- a/arch/arm/configs/cyanogenmod_i9500_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9500_defconfig
@@ -44,10 +44,12 @@ CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
+CONFIG_HAVE_KERNEL_LZ4=y
 # CONFIG_KERNEL_GZIP is not set
 CONFIG_KERNEL_LZMA=y
 # CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
+# CONFIG_KERNEL_LZ4 is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -109,6 +111,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
+# CONFIG_RD_LZ4 is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -507,34 +510,12 @@ CONFIG_SEC_MODEM_M0_XMM6360=y
 CONFIG_USB_CDFS_SUPPORT=y
 
 #
-# Debugging Feature
+# Watchdog Feature
 #
-CONFIG_SEC_DEBUG=y
-CONFIG_SEC_DEBUG_SCHED_LOG=y
-# CONFIG_SEC_DEBUG_SOFTIRQ_LOG is not set
-CONFIG_SEC_DEBUG_SCHED_LOG_NONCACHED=y
-# CONFIG_SEC_DEBUG_TIMER_LOG is not set
-# CONFIG_SEC_DEBUG_SEMAPHORE_LOG is not set
-CONFIG_SEC_DEBUG_USER=y
-# CONFIG_SEC_DEBUG_PM_TEMP is not set
-# CONFIG_SEC_DEBUG_IRQ_EXIT_LOG is not set
-# CONFIG_SEC_DEBUG_AUXILIARY_LOG is not set
-CONFIG_SEC_DEBUG_FUPLOAD_DUMP_MORE=y
-# CONFIG_SEC_DEBUG_UMP_ALLOC_FAIL is not set
-CONFIG_SEC_DEBUG_LIST_PANIC=y
-# CONFIG_SEC_DEBUG_IOVMM is not set
-# CONFIG_SEC_FILE_LEAK_DEBUG is not set
-# CONFIG_SEC_DEBUG_TIMERQUEUE_CORRUPTION is not set
 # CONFIG_SEC_WATCHDOG_RESET is not set
 CONFIG_ANDROID_WIP=y
 CONFIG_ANDROID_OOM_KILLER=y
 CONFIG_INTERNAL_ISP_START_CAMERA=y
-CONFIG_SEC_LOG=y
-CONFIG_SEC_LOG_NONCACHED=y
-# CONFIG_SEC_LOG_LAST_KMSG is not set
-CONFIG_SEC_AVC_LOG=y
-CONFIG_TIMA_DEBUG_LOG=y
-# CONFIG_KOR_B10_DEBUG is not set
 
 #
 # PowerManagement Feature
@@ -3370,6 +3351,9 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
 CONFIG_CRYPTO_LZO=y
+# CONFIG_CRYPTO_SNAPPY is not set
+# CONFIG_CRYPTO_LZ4 is not set
+# CONFIG_CRYPTO_LZ4HC is not set
 
 #
 # Random Number Generation
@@ -3423,3 +3407,4 @@ CONFIG_DQL=y
 CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
 # CONFIG_CORDIC is not set
+# CONFIG_SNAPPY is not set
