wireless: bcmdhd: restore stock configuration

--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -46,7 +46,7 @@ DHDCFLAGS += -DCUSTOM_TDLS_RSSI_THRESHOLD_LOW=-85
 # Roaming
 DHDCFLAGS += -DROAM_AP_ENV_DETECTION
 DHDCFLAGS += -DROAM_ENABLE -DROAM_CHANNEL_CACHE -DROAM_API
-# DHDCFLAGS += -DENABLE_FW_ROAM_SUSPEND
+DHDCFLAGS += -DENABLE_FW_ROAM_SUSPEND
 
 # CCX
 ifeq ($(CONFIG_BRCM_CCX),y)
@@ -59,7 +59,7 @@ DHDCFLAGS += -DSUPPORT_SOFTAP_SINGL_DISASSOC
 DHDCFLAGS += -DDISABLE_11H_SOFTAP
 
 # HW4 specific features
-# DHDCFLAGS += -DSUPPORT_PM2_ONLY
+DHDCFLAGS += -DSUPPORT_PM2_ONLY
 DHDCFLAGS += -DSUPPORT_DEEP_SLEEP
 DHDCFLAGS += -DSUPPORT_AMPDU_MPDU_CMD
 DHDCFLAGS += -DBLOCK_IPV6_PACKET -DPASS_IPV4_SUSPEND
@@ -69,7 +69,7 @@ DHDCFLAGS += -DSOFTAP_SEND_HANGEVT
 DHDCFLAGS += -DCUSTOM_PNO_EVENT_LOCK_xTIME=10
 
 # For Passing all multicast packets to host when not in suspend mode.
-# DHDCFLAGS += -DPASS_ALL_MCAST_PKTS
+DHDCFLAGS += -DPASS_ALL_MCAST_PKTS
 
 # Early suspend
 DHDCFLAGS += -DDHD_USE_EARLYSUSPEND
